feat: complete feature without tests