@@ -1,60 +1,90 @@
 package client;
 
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.util.Scanner;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class KVTaskClient {
-    private final String serverUrl;
+
+    private final HttpClient client;
+    private final String url;
     private final String apiToken;
 
-    public KVTaskClient(String serverUrl) throws IOException {
-        this.serverUrl = serverUrl;
-        this.apiToken = register();
+    public KVTaskClient(String url) {
+        client = HttpClient.newHttpClient();
+        this.url = url;
+        apiToken = this.register();
     }
 
-    private String register() throws IOException {
-        String url = serverUrl + "/register";
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
-        connection.setRequestMethod("GET");
-        if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
-            try (InputStream inputStream = connection.getInputStream()) {
-                return new Scanner(inputStream, StandardCharsets.UTF_8).useDelimiter("\\A").next();
+    private String register() {
+        String token = "";
+
+        URI uri = URI.create(url + "/register");
+        HttpRequest request = HttpRequest.newBuilder()
+                .GET()
+                .uri(uri)
+                .build();
+
+        try {
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() == 200) {
+                token = response.body();
+            } else {
+                System.out.println("Ошибка, сервер вернул код состояния" + response.statusCode());
             }
-        } else {
-            throw new RuntimeException("Failed to register to server, response code: " + connection.getResponseCode());
+        } catch (InterruptedException | IOException | NullPointerException e) {
+            System.out.println("Ошибка, регистрация не удалась");
         }
+
+        return token;
     }
 
-    public void put(String key, String json) throws IOException {
-        String url = serverUrl + "/save/" + key + "?API_TOKEN=" + apiToken;
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
-        connection.setRequestMethod("POST");
-        connection.setDoOutput(true);
-        try (OutputStream outputStream = connection.getOutputStream()) {
-            byte[] input = json.getBytes(StandardCharsets.UTF_8);
-            outputStream.write(input, 0, input.length);
-        }
-        if (connection.getResponseCode() != HttpURLConnection.HTTP_OK) {
-            throw new RuntimeException("Failed to put data to server, response code: " + connection.getResponseCode());
-        }
-    }
+    public void put(String key, String json) {
+        URI uri = URI.create(url + "/save/" + key + "?API_TOKEN=" + apiToken);
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(uri)
+                .POST(HttpRequest.BodyPublishers.ofString(json))
+                .build();
 
-    public String load(String key) throws IOException {
-        String url = serverUrl + "/load/" + key + "?API_TOKEN=" + apiToken;
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
-        connection.setRequestMethod("GET");
-        if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
-            try (InputStream inputStream = connection.getInputStream()) {
-                return new Scanner(inputStream, StandardCharsets.UTF_8).useDelimiter("\\A").next();
+        try {
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() == 200) {
+                System.out.println("Значение по ключу " + key + " обновлено");
+            } else {
+                System.out.println("Ошибка, сервер вернул код состояния" + response.statusCode());
             }
-        } else {
-            throw new RuntimeException("Failed to load data from server, response code: " + connection.getResponseCode());
+        } catch (InterruptedException | IOException | NullPointerException e) {
+            System.out.println("Ошибка, значение не обновлено");
         }
+    }
+
+    public String load(String key) {
+        String value = "";
+
+        URI uri = URI.create(url + "/load/" + key + "?API_TOKEN=" + apiToken);
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(uri)
+                .GET()
+                .build();
+
+        try {
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            if (response.statusCode() == 200) {
+                value = response.body();
+                System.out.println("Значение по ключу " + key + " получено");
+            } else {
+                System.out.println("Ошибка, сервер вернул код состояния" + response.statusCode());
+            }
+        } catch (InterruptedException | IOException | NullPointerException e) {
+            System.out.println("Ошибка, такого ключа нет");
+//            e.printStackTrace();
+        }
+        return value;
     }
 
     public String getApiToken() {
